Fix collapsing issues with chunk 3
Eliminate white space cause by fixed width in quote-text element and set flex-basis instead

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
-    min-height: 100vh;
+    padding: 0px;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     font-family: Roboto ,arial;
@@ -108,14 +110,19 @@ button {
 
 .third-chunk {
     background-color: #E5E7EB;
-    flex-shrink: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 0px;
 }
 
 .quote {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
+    flex-basis: 800px;
+    justify-content: center;
+    gap: 0px;
+    
 }
 
 .quote-text {
@@ -123,15 +130,13 @@ button {
     font-weight: lighter;
     font-style: italic;
     font-size: 36px;
-    margin-top: 100px;
-    width: 800px;
+    margin: 0;
 }
 
 .credit {
-    flex-basis: 10px;
-    text-align: right;
     font-weight: bold;
-    margin-bottom: 100px;
+    align-self: flex-end;
+    margin: 0;
 }
 
 .fourth-chunk {
